add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion - Coming Soon</title>
+    <link href="/resouces/css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <h1> Discover hidden places in the world around you</h1>
+    <h2>Dowload Excusion (Coming Soon!)</h2>
 
   </body>
 </html>
