Add video image

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion - Coming Soon</title>
-    <link href="/resouces/css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
+
     <h1> Discover hidden places in the world around you</h1>
     <h2>Dowload Excusion (Coming Soon!)</h2>
-
+<div id="iphone_image">
+  <video src=" resources/video/excursion.mp4" autoplay="" loop="">
+</div>
   </body>
 </html>
