--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
   <body>
 
     <h1> Discover hidden places in the world around you</h1>
-    <h2>Dowload Excusion (Coming Soon!)</h2>
-<div id="iphone_image">
+    <a href="#">Download Excursion (Coming Soon)</a>
+<div class="iphone_image">
   <video src=" resources/video/excursion.mp4" autoplay="" loop="">
+</div>
+<div id="travelguide">
+  <h3>Your Personal travel guide</h3>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <img src=" resources/images/camp.jpg" alt="">
+</div>
+<div class="spacer"></div>
+<div class="comingsoon">
+  <img src=" resources/images/phone.png" alt="" width="64px" height="108px">
+  <h3>Coming Soon for iPhone and Android</h3>
+  <a href="#">Download Excursion (Coming Soon)</a>
+</div>
+<div class="copywrite">
+  <p>&copy; Excursion</p>
 </div>
   </body>
 </html>
