--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="iphone_image">
   <video src=" resources/video/excursion.mp4" autoplay="" loop="">
 </div>
-<div id="travelguide">
-  <h3>Your Personal travel guide</h3>
+<div class="travelguide">
+  <h3>Your personal travel guide</h3>
   <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   <img src=" resources/images/camp.jpg" alt="">
 </div>
